--- a/frontend/app/view2/view2.html
+++ b/frontend/app/view2/view2.html
@@ -1,4 +1,4 @@
-<p>This is the partial for view 2.</p>
+<h1>{{ smoothie.name }}</h1>
 <p>
   Showing of 'interpolate' filter:
   {{ 'Current version is v%VERSION%.' | interpolate }}
